--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -6,7 +6,130 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous"/>
     <style>
-        /* ... (styles from the previous response) ... */ 
+        html {
+            background: lightgrey; 
+        }
+
+        body{
+            font-family: 'Roboto', sans-serif;
+            color: #333; 
+        }
+
+        html, body, .viewport {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+          }
+
+        #app{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+        }
+
+        #BrandLogo{ 
+            height: 200px;
+            width: 400px;
+        }
+
+        .content{
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            font-weight: lighter;
+        }
+
+        p {
+            text-align: center;
+        }
+
+        .section {
+            margin-top: 30px;
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            font-weight: lighter;
+            background-color: lightgrey; 
+        }
+
+        .section h1,h2,h3,h4 {
+            margin: 5px;
+            text-align: center;
+        }
+
+        a{
+            text-decoration: none;
+        }
+
+        .btn {
+            text-transform: uppercase;
+            position: relative;
+            font-weight: bold;
+            display: block;
+            margin: 30px auto;
+            padding: 0;
+
+            overflow: hidden;
+
+            border-width: 0;
+            outline: none;
+            border-radius: 2px;
+            box-shadow: 0 1px 4px rgba(0, 0, 0, .6);
+
+            background-color: #e22866;
+            color: #ecf0f1;
+
+            transition: background-color .3s;
+
+          }
+
+          .btn:hover, .btn:focus {
+            background-color: transparent;
+            border: 2px #e22866 solid;
+            cursor: pointer;
+          }
+
+          .btn > * {
+            position: relative;
+          }
+
+          .btn span {
+            display: block;
+            padding: 12px 24px;
+          }
+
+          .btn:before {
+            content: "";
+
+            position: absolute;
+            top: 50%;
+            left: 50%;
+
+            display: block;
+            width: 0;
+            padding-top: 0;
+
+            border-radius: 100%;
+
+            background-color: transparent;
+
+            -webkit-transform: translate(-50%, -50%);
+            -moz-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+            -o-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+          }
+
+          .btn:active:before {
+            width: 120%;
+            padding-top: 120%;
+
+            transition: width .2s ease-out, padding-top .2s ease-out;
+          }
     </style>
 </head>
 <body>
