--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -167,7 +167,7 @@
 
             <div class="section">
                 <h1>Profile Data (JSON)</h1> 
-                <pre>{{profileJson}}</pre> 
+                <pre>{{profile}}</pre> 
             </div>
 
             <div class="section">
