--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -135,6 +135,9 @@
 <body>
     <div id="app">
         {{#if profile}}
+        <script>
+  console.log({{{profile}}}); 
+</script>
         <div id="BrandLogo"></div> 
         <div class="content">
 
