--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -136,7 +136,7 @@
     <div id="app">
         {{#if profile}}
         <script>
-  console.log({{{profile}}}); 
+  console.log({{profile}}); 
 </script>
         <div id="BrandLogo"></div> 
         <div class="content">
