--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+// V2
 <head>
     <meta charset="utf-8">
     <title></title>
@@ -174,7 +175,7 @@
 </div>
 
 <script>
-  const profile = {{{profile}}}; // Assuming 'profile' is passed to the template
+  const profile = {{{profile}}}; 
   const profileJson = JSON.stringify(profile, null, 2);
   document.getElementById('profile-json').textContent = profileJson;
 </script>
