--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -175,7 +175,7 @@
 
             <div class="section">
                 <h1>Peninsular</h1>
-                <p>You current Peninsular tier is <b>{{profile.tier}}</b>. You have a <b>{{profile.spendDiscount}}</b> discount on your onboard spend.</p>
+                <p>You current Peninsular tier is <b>{{profile.template.tier}}</b>. You have a <b>{{profile.spendDiscount}}</b> discount on your onboard spend.</p>
             </div>
 
           <div class="section">
