--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -11,7 +11,7 @@
     }
 
     .container {
-      margin-top: 80px; 
+      margin-top: 80px;
     }
 
     #BrandLogo {
@@ -38,38 +38,50 @@
       background-color: #d91e5a;
       border-color: #d91e5a;
     }
+
+    .hero-image {
+      background-image: url("your-hero-image.jpg");
+      background-size: cover;
+      background-position: center;
+      height: 400px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      color: white;
+    }
   </style>
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"> 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="your-logo.png" alt="Brand Logo" height="40"> 
+        <img src="your-logo.png" alt="Brand Logo" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav"> 
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
+          {{#unless profile}}
           <li class="nav-item">
-            <a class="nav-link" href="/protected">Protected</a> 
+            <a class="nav-link" href="/protected">Protected</a>
           </li>
+          {{/unless}}
         </ul>
       </div>
     </div>
   </nav>
 
-
+  {{#if profile}}
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
 
-        {{#if profile}}
-        <img id="BrandLogo" src="your-logo.png" alt="Brand Logo">
 
         <div class="section">
           <h2 class="text-center">Welcome to the {{profile.current_sailing.ship}}, {{profile.given_name}}!</h2>
@@ -80,21 +92,21 @@
           <p>You are staying in cabin {{profile.current_sailing.cabin}}</p>
         </div>
 
-        {{#if profile.template.ageVerified}}
+        {{#if profile.template.ageVerified}} 
         <div class="section">
           <h3>Gaming</h3>
-          <p>Thank you for verifying your age.</p>
+          <p>Thank you for verifying your age.</p> 
         </div>
         {{else}}
         <div class="section">
           <h3>Age Verified Services</h3>
-          <p>Please see a staff member to verify your age to access these services.</p>
+          <p>Please see a staff member to verify your age to access these services.</p> 
         </div>
         {{/if}}
 
         <div class="section">
           <h3>Profile Tier</h3>
-          <p>Your current Peninsular tier is <b>{{profile.template.tier}}</b>.</p>
+          <p>Your current Peninsular tier is <b>{{profile.template.tier}}</b>.</p> 
         </div>
 
         <div class="section">
@@ -110,7 +122,23 @@
           <a href="/logout" class="btn btn-primary btn-lg">Logout</a>
         </div>
 
-        {{else}}
+      </div>
+    </div>
+  </div>
+
+  {{else}}
+
+  <div class="hero-image">
+    <div class="hero-text">
+      <h1>Welcome to the Cruise!</h1>
+      <p>Some catchy tagline here.</p>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+
         <img id="BrandLogo" src="your-logo.png" alt="Brand Logo">
 
         <div class="section">
@@ -120,11 +148,12 @@
         <div class="section text-center">
           <a href="/protected" class="btn btn-primary btn-lg">Login</a>
         </div>
-        {{/if}}
 
       </div>
     </div>
   </div>
+  {{/if}}
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
