--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -40,7 +40,7 @@
     }
 
     .hero-image {
-      background-image: url("your-hero-image.jpg");
+      background-image: url("https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0banner2.png?v=1737596013410");
       background-size: cover;
       background-position: center;
       height: 400px;
@@ -57,7 +57,7 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="#">
-        <img src="your-logo.png" alt="Brand Logo" height="40">
+        <img src="https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0.svg?v=1737595928848" alt="Brand Logo" height="40">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
