--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -43,7 +43,7 @@
       background-image: url("https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0banner2.png?v=1737596013410");
       background-size: cover;
       background-position: center;
-      height: 400px;
+      min-height: 400px;
       display: flex;
       align-items: center;
       justify-content: center;
