--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -41,9 +41,8 @@
 
     .hero-image {
       background-image: url("https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0banner2.png?v=1737596013410");
-   background-repeat: no-repeat; 
-      background-position: center center; 
-      background-size: contain; 
+     background-size: cover; 
+      background-position: center;
       min-height: 400px; 
       display: flex;
       align-items: center;
@@ -139,12 +138,6 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 offset-md-2">
-
-        <img id="BrandLogo" src="your-logo.png" alt="Brand Logo">
-
-        <div class="section">
-          <h2 class="text-center">Welcome!</h2>
-        </div>
 
         <div class="section text-center">
           <a href="/protected" class="btn btn-primary btn-lg">Login</a>
