--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -40,15 +40,26 @@
     }
 
     .hero-image {
-      background-image: url("https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0banner2.png?v=1737596013410");
-     background-size: cover; 
+      background-image: linear-gradient(to bottom, #ffd700, #ffff99); 
+      background-size: cover;
       background-position: center;
-      min-height: 400px; 
+      min-height: 400px;
       display: flex;
+      flex-direction: column; 
       align-items: center;
       justify-content: center;
       text-align: center;
       color: white;
+    }
+
+    .hero-logo {
+      max-width: 200px; 
+      margin-bottom: 20px; 
+    }
+
+    .hero-text {
+      font-size: 24px; 
+      font-weight: bold; 
     }
   </style>
 </head>
@@ -128,11 +139,9 @@
 
   {{else}}
 
-  <div class="hero-image">
-    <div class="hero-text">
-      <h1>Bank0</h1>
-      <p>Secure authentication with less friction.</p>
-    </div>
+    <div class="hero-image">
+    <img src="your-sag-logo.png" alt="SAG Logo" class="hero-logo">
+    <div class="hero-text">Your Text Phrase Here</div>
   </div>
 
   <div class="container">
