--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -40,7 +40,7 @@
     }
 
     .hero-image {
-      background-image: linear-gradient(to bottom, #ffd700, #ffff99); 
+      background-image: linear-gradient(to bottom, #FE8338, #EDC13F); 
       background-size: cover;
       background-position: center;
       min-height: 400px;
@@ -140,8 +140,8 @@
   {{else}}
 
     <div class="hero-image">
-    <img src="your-sag-logo.png" alt="SAG Logo" class="hero-logo">
-    <div class="hero-text">Your Text Phrase Here</div>
+    <img src="https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0.svg?v=1737595928848" alt="logo" class="hero-logo">
+    <div class="hero-text">Secure authentication with less friction</div>
   </div>
 
   <div class="container">
