--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -43,7 +43,7 @@
       background-image: linear-gradient(to bottom, #FE8338, #EDC13F);
       background-size: cover;
       background-position: center;
-      min-height: 400px;
+      min-height: 700px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -63,17 +63,18 @@
       font-size: 24px;
       font-weight: bold;
     }
+.navbar {
+  min-height: 40px; /* Reduced navbar height further */
+  padding-top: 0.5rem; /* Adjust padding to reduce spacing */
+  padding-bottom: 0.5rem;
+}
 
-    .navbar {
-      min-height: 60px; /* Reduced navbar height */
-    }
-
-    .navbar-brand img {
-      max-width: 200px; /* Adjusted logo size */
-      height: auto;
-      margin: 0 auto; /* Centered logo */
-      display: block;
-    }
+.navbar-brand img {
+  max-width: 150px; /* Adjust logo size as needed */
+  height: auto;
+  margin: 0 auto; /* Centered logo */
+  display: block;
+}
   </style>
 </head>
 <body>
