--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -64,10 +64,15 @@
       font-weight: bold;
     }
 .navbar {
-  min-height: 40px; /* Reduced navbar height further */
-  padding-top: 0.5rem; /* Adjust padding to reduce spacing */
+  min-height: 40px; 
+  padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  margin-top: 0; /* Remove default margin-top */ 
+  margin-top: 0; 
+}
+
+.navbar-nav .nav-link { /* Target the nav links specifically */
+  padding-top: 0.5rem; /* Reduce padding on nav links */
+  padding-bottom: 0.5rem;
 }
 
 .navbar-brand img {
@@ -175,6 +180,48 @@
         </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-6">
+          <div class="section">
+            <a href="your-link-1"> 
+              <img src="tile-1-logo.png" alt="Tile 1 Logo" class="img-fluid mb-3" style="max-width: 50px;">
+              <h4>Tile 1 Title</h4>
+              <p>Tile 1 Subtitle</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="section">
+            <a href="your-link-2"> 
+              <img src="tile-2-logo.png" alt="Tile 2 Logo" class="img-fluid mb-3" style="max-width: 50px;">
+              <h4>Tile 2 Title</h4>
+              <p>Tile 2 Subtitle</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="section">
+            <a href="your-link-3"> 
+              <img src="tile-3-logo.png" alt="Tile 3 Logo" class="img-fluid mb-3" style="max-width: 50px;">
+              <h4>Tile 3 Title</h4>
+              <p>Tile 3 Subtitle</p>
+            </a>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="section">
+            <a href="your-link-4">
+              <img src="tile-4-logo.png" alt="Tile 4 Logo" class="img-fluid mb-3" style="max-width: 50px;">
+              <h4>Tile 4 Title</h4>
+              <p>Tile 4 Subtitle</p>
+            </a>
+          </div>
+        </div>
+      </div> 
+
+    </div>
+  </div>
+</div>
 {{/if}}
 
 
