--- a/handlebars-template.handlebars
+++ b/handlebars-template.handlebars
@@ -64,22 +64,18 @@
       font-weight: bold;
     }
 .navbar {
-  min-height: 40px; 
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  margin-top: 0; 
-}
-
-.navbar-nav .nav-link { /* Target the nav links specifically */
-  padding-top: 0.5rem; /* Reduce padding on nav links */
-  padding-bottom: 0.5rem;
+  min-height: 20px; /* Adjust height as needed */
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .navbar-brand img {
-  max-width: 150px; /* Adjust logo size as needed */
-  height: auto;
-  margin: 0 auto; /* Centered logo */
-  display: block;
+  height: 40px; /* Adjust logo height as needed */
+}
+
+.navbar-nav .nav-link {
+  padding-left: 1.5rem; /* Adjust spacing between links */
+  padding-right: 1.5rem;
 }
     .tile-link {
   display: flex; /* Make the tile content flexible */
@@ -104,28 +100,32 @@
 </head>
 <body>
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">
-        <img src="https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0.svg?v=1737595928848" alt="Brand Logo" height="40">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
-          </li>
-          {{#unless profile}}
-          <li class="nav-item">
-            <a class="nav-link" href="/protected">My Profile</a>
-          </li>
-          {{/unless}}
-        </ul>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="#">
+      <img src="https://cdn.glitch.global/c9f45299-bc6c-42f3-98bb-7f211bd8798b/bank0.svg?v=1737595928848" alt="Brand Logo" height="40">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Public</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Log In</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
 
   {{#if profile}}
   <div class="container">
